fix formwrap logic

--- a/app/src/copmponents/FormWrap/styles.module.css
+++ b/app/src/copmponents/FormWrap/styles.module.css
@@ -1,4 +1,5 @@
 .openFormWrap {
+    padding-top: 8px;
     height: 60px;
     font-size: 22px;
     color: #969ca1;
